--- a/exercise03.ipynb
+++ b/exercise03.ipynb
@@ -48,6 +48,24 @@
    "source": [
     "np.arange(start=1, stop=10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "52d0b8f9-0bb0-4fbc-bef8-fde9953f009a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import arange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d39b572-f401-4c22-a089-5ab01a5078b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
